force-app/main/default/objects/Opportunity_Merge_Mapping__mdt.object
<CustomObject>
    <description>Custom metadata used for opportunity merge tool</description>
    <fields>
        <fullName>Boolean_AND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean AND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Null_Check_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Null Check Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectField__c</fullName>
        <label>SObjectField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Merge Mapping</label>
    <pluralLabel>Opportunity Merge Mappings</pluralLabel>
</CustomObject>